[package]
name = "xkcdbot-rs"
version = "0.1.0"
authors = ["Mason Ginter <mason@dagint.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

xkcd-utils = {git = "https://github.com/Hpmason/xkcd-utils", version = "0.1.0"}

# General Dependencies
tokio = {version = "1.2.0", features = ["rt-multi-thread", "macros"]}
async-trait = "0.1.42"

# Bot dependencies
serenity = "0.10.2"
