[package]
name = "xkcdbot-rs"
version = "0.2.0"
authors = ["Mason Ginter <mason@dagint.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Discord bot for grabbing and formatting XKCD comics"
readme = "README.md"
repository = "https://github.com/Hpmason/xkcdbot-rs"
keywords = ["discord", "xkcd", "bot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

xkcd-utils = {git = "https://github.com/Hpmason/xkcd-utils", branch = "master"}

# General Dependencies
tokio = {version = "1.2.0", features = ["rt-multi-thread", "macros"]}
async-trait = "0.1.42"

# Bot dependencies
serenity = "0.11.4"
