[package]
name = "xkcd_utils"
version = "0.1.0"
authors = ["Mason Ginter <mason@dagint.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serenity = "0.10.2"
tokio = {version = "1.2.0", features = ["rt-multi-thread", "macros"]}
async-trait = "0.1.42"
reqwest = {version = "0.11.0", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.4"
lazy_static = "1.4"